[tool.poetry]
name = "jk-demo1"
version = "0.0.1"
description = "this is a test"
authors = ["jessime"]
license = "MIT"
readme = "README.md"
packages = [{include = "jk_demo1"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
black = "^22.10.0"
isort = "^5.10.1"
ipython = "^8.6.0"
numpy = "^1.23.5"
torch = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
